--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -72,6 +72,21 @@ services:
       - DOZZLE_LEVEL=info
     restart: unless-stopped
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: picocalc-pgadmin
+    ports:
+      - "5050:80"
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
+      - PGADMIN_CONFIG_SERVER_MODE=False
+    volumes:
+      - /mnt/user/appdata/picocalc/pgadmin:/var/lib/pgadmin
+    depends_on:
+      - db
+    restart: unless-stopped
+
 volumes:
   postgres_data:
   backup_data:
