--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -75,6 +75,7 @@ services:
   pgadmin:
     image: dpage/pgadmin4:latest
     container_name: picocalc-pgadmin
+    user: "0:0"
     ports:
       - "5050:80"
     environment:
