--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -8,3 +8,6 @@ pydantic==2.5.3
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
 alembic==1.13.1
+# PNG to SVG Converter
+vtracer==0.6.11
+pillow==10.2.0
