--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,6 +33,9 @@ services:
     environment:
       - DATABASE_URL=postgresql://printuser:${DB_PASSWORD}@db:5432/printcalc
       - SECRET_KEY=${SECRET_KEY}
+      - FILE_STORAGE_PATH=/app/storage
+    volumes:
+      - /mnt/user/appdata/picocalc/storage:/app/storage
     depends_on:
       - db
     restart: unless-stopped
@@ -46,6 +49,7 @@ services:
       - /mnt/user/backups/picocalc:/backup
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /etc/localtime:/etc/localtime:ro
+      - /mnt/user/appdata/picocalc/storage:/backup/files:ro
     environment:
       - BACKUP_CRON_EXPRESSION=0 6,12,18 * * *
       - BACKUP_RETENTION_DAYS=14
