Fix Dockerfile to include alembic files
- Change build context from ./app to root directory
- Update Dockerfile paths for new context
- Mount alembic files in dev docker-compose
- Update docker-compose.prod.yml build context

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -25,8 +25,8 @@ services:
 
   web:
     build: 
-      context: ./app
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: app/Dockerfile
     container_name: picocalc-app
     ports:
       - "5000:5000"
