--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -9,13 +9,17 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements
-COPY requirements.txt .
+COPY app/requirements.txt .
 
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
-COPY . .
+COPY app/ .
+
+# Copy alembic config (from root context)
+COPY alembic.ini /app/
+COPY alembic /app/alembic/
 
 # Expose port
 EXPOSE 5000
